WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186385
REGRESSION (
r232520
): Crash under IPC::ArgumentCoder<WebCore::Credential>::encodePlatformData
https://bugs.webkit.org/show_bug.cgi?id=186385
Summary
REGRESSION (r232520): Crash under IPC::ArgumentCoder<WebCore::Credential>::en...
mitz
Reported
2018-06-06 23:39:32 PDT
<
rdar://problem/40853796
> A typo in <
https://trac.webkit.org/r232520
> caused a CFDataRef to get passed to the CFArrayRef encoder, leading to a crash. Patch forthcoming.
Attachments
Fix an incorrect cast
(1.48 KB, patch)
2018-06-06 23:43 PDT
,
mitz
dbates
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2018-06-06 23:43:40 PDT
Created
attachment 342128
[details]
Fix an incorrect cast
mitz
Comment 2
2018-06-07 00:06:32 PDT
Fixed in <
https://trac.webkit.org/r232576
>.
Darin Adler
Comment 3
2018-06-07 09:03:19 PDT
So sorry. Thanks for quickly fixing it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug