REGRESSION (r232520): Crash under IPC::ArgumentCoder<WebCore::Credential>::encodePlatformData https://bugs.webkit.org/show_bug.cgi?id=186385 <rdar://problem/40853796>

Reviewed by Daniel Bates.

* Shared/mac/WebCoreArgumentCodersMac.mm:
(IPC::ArgumentCoder<Credential>::encodePlatformData): Fixed an incorrect cast.



Canonical link: https://commits.webkit.org/201751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232576 268f45cc-cd09-0410-ab3c-d52691b4dbfc